--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 	<link href="assets/css/demo.css" rel="stylesheet" />
 
 	<!--     Fonts and icons     -->
-	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
-	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'> -->
+	<!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="assets/css/montserrat.css" rel="stylesheet">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
 	<link href="assets/css/nucleo-icons.css" rel="stylesheet" />
 
 </head>
