--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8" />
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<!-- <link rel="icon" type="image/png" href="assets/img/"> -->
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Paper Kit 2 PRO by Creative Tim</title>
+	<title>PPC - BES</title>
 
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta name="viewport" content="width=device-width" />
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/paper-kit.css?v=2.0.1" rel="stylesheet"/>
-    <link href="assets/css/demo.css" rel="stylesheet" />
+	<link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="assets/css/paper-kit.css" rel="stylesheet"/>
+	<link href="assets/css/demo.css" rel="stylesheet" />
 
-    <!--     Fonts and icons     -->
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/nucleo-icons.css" rel="stylesheet">
-
+	<!--     Fonts and icons     -->
+	<!-- <link href='http://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'> -->
+	<!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="assets/css/montserrat.css" rel="stylesheet">
+	<link href="assets/css/font-awesome.min.css" rel="stylesheet">
+	<link href="assets/css/nucleo-icons.css" rel="stylesheet" />
 
 	<style type="text/css">
 		.search-form {
@@ -38,7 +38,8 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-toggleable-md fixed-top navbar-transparent" color-on-scroll="300">
+
+<nav class="navbar navbar-toggleable-md fixed-top navbar-transparent" color-on-scroll="300">
         <div class="container">
 			<div class="navbar-translate">
 	            <button class="navbar-toggler navbar-toggler-right navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -279,15 +280,28 @@
 			</div>
 		</div>
 	</footer>
-</body>
 
+
+</body>
 <!-- Core JS Files -->
 <script src="assets/js/jquery-3.2.1.js" type="text/javascript"></script>
 <script src="assets/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
 <script src="assets/js/tether.min.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 
-<!--  Paper Kit Initialization snd functons -->
-<script src="assets/js/paper-kit.js?v=2.0.1"></script>
+<!-- Plugin for Share buttons -->
+<script src="assets/js/jquery.sharrre.js"></script>
 
+<!-- Switches -->
+<script src="assets/js/bootstrap-switch.min.js"></script>
+
+<!--  Plugins for Slider -->
+<script src="assets/js/nouislider.js"></script>
+
+<!--  Plugins for DateTimePicker -->
+<script src="assets/js/moment.min.js"></script>
+<script src="assets/js/bootstrap-datetimepicker.min.js"></script>
+
+<!--  Paper Kit Initialization snd functons -->
+<script src="assets/js/paper-kit.js?v=2.0.0"></script>
 </html>
