--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
         padding-right: .5rem;
         padding-left: .5rem;
       }
+
+      .bd-navbar .navbar-nav-scroll {
+        max-width: 100%;
+        height: 2.5rem;
+        overflow: hidden;
+        font-size: .875rem;
+      }
+    }
+
+    .bd-navbar .navbar-nav .nav-link.active{
+      font-weight: 500;
     }
 
     .bd-navbar {
