--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
             <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="" onclick="">Documentation</a>
+            <a class="nav-link" href="" onclick="">Matriz Curricular</a>
+          </li>
+	  <li class="nav-item">
+            <a class="nav-link" href="" onclick="">Informações</a>
           </li>
         </ul>
       </div>
@@ -160,8 +163,6 @@
       </a>
     </li>
   </ul>
-
-      <a class="btn btn-outline-primary d-none d-md-inline-block mb-3 mb-md-0 ml-md-3" href="assets/docs/ppc-bes.pdf" download="PPC-BES.pdf">Download</a>
 
       <form class="form-inline ml-md-3">
         <input class="form-control mr-sm-2" type="text" placeholder="Pesquisar..." aria-label="Search">
