Sugestão de divisão do tópicos

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <a class="nav-link active" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="" onclick="">Documentation</a>
+            <a class="nav-link" href="" onclick="">Matriz Curricular</a>
           </li>
         </ul>
       </div>
@@ -202,12 +202,12 @@
     </main>
 
     <div class="masthead-followup row m-0 border border-white">
-  <div class="col-12 col-md-4 p-3 p-md-5 bg-light border border-white">
+  <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
     <svg class="text-primary mb-2" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
       <path d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 16 L16 24 24 16" />
     </svg>
-    <h3>Installation</h3>
+    <h3>Sobre o curso</h3>
     <p>Include Bootstrap's source Sass and JavaScript files via Bower, Composer, Meteor, or npm. Package managed installs don't include documentation, but do include our build system and readme.</p>
 
 <figure class="highlight mx-0"><pre><code class="language-sh" data-lang="sh">npm install bootstrap@4.0.0-beta</code></pre></figure>
@@ -219,12 +219,10 @@
     <a class="btn btn-outline-primary" href="/docs/4.0/getting-started/download">Read installation docs</a>
   </div>
 
-  <div class="col-12 col-md-4 p-3 p-md-5 bg-light border border-white">
+  <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
-    <svg class="text-primary mb-2" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-      <path d="M9 22 C0 23 1 12 9 13 6 2 23 2 22 10 32 7 32 23 23 22 M11 26 L16 30 21 26 M16 16 L16 30" />
-    </svg>
-    <h3>Bootstrap CDN</h3>
+    <i class="fa fa-list-alt text-primary mb-2" style="font-size:28px;"></i>
+    <h3>Estrutura curricular</h3>
     <p>When you only need to include Bootstrap's compiled CSS or JS, you can use the Bootstrap CDN.</p>
     <h5>CSS only</h5>
 <figure class="highlight mx-0"><pre><code class="language-html" data-lang="html"><span class="nt">&lt;link</span> <span class="na">rel=</span><span class="s">"stylesheet"</span> <span class="na">href=</span><span class="s">"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"</span> <span class="na">integrity=</span><span class="s">"sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"</span> <span class="na">crossorigin=</span><span class="s">"anonymous"</span><span class="nt">&gt;</span></code></pre></figure>
@@ -237,12 +235,21 @@
     <a class="btn btn-outline-primary" href="/docs/4.0/layout/overview/">Explore the docs</a>
   </div>
 
-  <div class="col-12 col-md-4 p-3 p-md-5 bg-light border border-white">
+  <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
-    <svg class="text-primary mb-2" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-      <path d="M18 13 L26 2 8 13 14 19 6 30 24 19 Z" />
-    </svg>
-    <h3>Official Themes</h3>
+    <i class="fa fa-book text-primary mb-2" style="font-size:28px;"></i>
+    <h3>Disciplinas</h3>
+    <p>
+      Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
+    </p>
+    <img class="img-fluid mt-3 mx-auto" src="/assets/img/bootstrap-themes.png" alt="Bootstrap Themes" width="1024" height="388">
+    <hr class="half-rule">
+    <a href="https://themes.getbootstrap.com" class="btn btn-outline-primary">Browse themes</a>
+  </div>
+  <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
+    <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
+    <i class="fa fa-info text-primary mb-2" style="font-size:28px;"></i>
+    <h3>Outras informações</h3>
     <p>
       Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
     </p>
@@ -252,6 +259,7 @@
   </div>
 </div>
 
+
 <footer class="bd-footer text-muted">
   <div class="container-fluid p-3 p-md-5">
     <ul class="bd-footer-links">
@@ -260,6 +268,7 @@
     <p>Inspirado em <a href="https://getbootstrap.com/" target="_blank" rel="noopener">Bootstrap</a>.</p>
     <p>Codigo licenciado <a rel="license noopener" href="https://github.com/matheuspiment/integracao2017/blob/master/LICENSE" target="_blank">MIT</a>, documentação <a rel="license noopener" href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.</p>
   </div>
+
 </footer>
 
 
