--- a/index.html
+++ b/index.html
@@ -207,9 +207,7 @@
     <div class="masthead-followup row m-0 border border-white">
   <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
     <!-- Icon by Bytesize https://github.com/danklammer/bytesize-icons -->
-    <svg class="text-primary mb-2" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
-      <path d="M28 22 L28 30 4 30 4 22 M16 4 L16 24 M8 16 L16 24 24 16" />
-    </svg>
+    <img class="mt-2 mb-2" src="assets/img/logo-es.png" style="width: 32px; heigth: 32px;"></img>
     <h3>Sobre o curso</h3>
     <p>Include Bootstrap's source Sass and JavaScript files via Bower, Composer, Meteor, or npm. Package managed installs don't include documentation, but do include our build system and readme.</p>
 
