--- a/dashboard.html
+++ b/dashboard.html
@@ -45,7 +45,7 @@
             </div>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="index.html" method="get">
+        <form class="form-inline my-2 my-lg-0" action="pesquisa.html" method="get">
           <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
