:art: Adicionar chave "palavraChave" no JSON

--- a/pesquisa.html
+++ b/pesquisa.html
@@ -100,7 +100,7 @@
             indices = data.indices;
 
             for (i = 0; i < indices.length; i++) {
-              if (indices[i].topico == keyword) {
+              if (indices[i].palavrasChave == keyword) {
                 // console.log(indices[i].topico);
                 saida += '<div class="col-md-12">';
                 saida += '<a href="' + indices[i].path + '">';
