:art: Adicionar descrição dos tópicos da home

--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
       <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
         <img class="mt-2 mb-2" src="assets/img/logo-es.png" style="width: 32px; heigth: 32px;"></img>
         <h3>Sobre o curso</h3>
-        <p>Include Bootstrap's source Sass and JavaScript files via Bower, Composer, Meteor, or npm. Package managed installs don't include documentation, but do include our build system and readme.</p>
+        <p class="text-justify">
+          O Curso de Engenharia de Software forma o profissional de software,
+          o engenheiro de Software, apto a participar de e conduzir empreendimentos
+          de softwares que sejam competitivos no mercado global. O estudante recebe
+          formação que lhe assegura sólida carreira na valiosa indústria de software
+          e o inicia no processo de formação de sua própria reputação como profissional.
+        </p>
         <hr class="half-rule">
         <a class="btn btn-outline-primary" href="#">Saiba mais</a>
       </div>
@@ -93,9 +99,14 @@
       <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
         <i class="fa fa-list-alt text-primary mb-2" style="font-size:28px;"></i>
         <h3>Estrutura curricular</h3>
-        <p>When you only need to include Bootstrap's compiled CSS or JS, you can use the Bootstrap CDN.</p>
-        <h5>CSS only</h5>
-        <h5>JS, Popper, and jQuery</h5>
+        <p class="text-justify">
+          A matriz curricular do curso perfaz 44 disciplinas. Sendo 17 disciplinas
+          de formação básica em computação. Em particular, 4 disciplinas são oferecidas
+           pelo Instituto de Matemática e Estatística (IME) e as outras 13 oferecidas
+           pelo INF que fornecem uma sólida formação em Computação, o que inclui o
+           recomendado para a formação em Matemática. E as demais disciplinas com
+           ênfase na formação específica em Engenharia de Software.
+        </p>
         <hr class="half-rule">
         <a class="btn btn-outline-primary" href="#">Saiba mais</a>
       </div>
@@ -103,8 +114,12 @@
       <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
         <i class="fa fa-book text-primary mb-2" style="font-size:28px;"></i>
         <h3>Disciplinas</h3>
-        <p>
-          Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
+        <p class="text-justify">
+          As disciplinas estão organizadas em nove períodos letivos. Os quatro
+          primeiros períodos concentram as disciplinas de formação básica em
+          Computação: disciplinas de Computação propriamente ditas e aquelas de
+          Matemática. Os demais períodos incluem disciplinas com ênfase na formação
+           específica em Engenharia de Software.
         </p>
         <hr class="half-rule">
         <a href="#" class="btn btn-outline-primary">Saiba mais</a>
@@ -112,8 +127,11 @@
       <div class="col-12 col-md-3 p-3 p-md-5 bg-light border border-white">
         <i class="fa fa-info text-primary mb-2" style="font-size:28px;"></i>
         <h3>Outras informações</h3>
-        <p>
-          Take Bootstrap 4 to the next level with official premium themes—toolkits built on Bootstrap with new components and plugins, docs, and build tools.
+        <p class="text-justify">
+          O Bacharelado em Engenharia de Software (BES) existe e se mantém em um
+           contexto no qual se destaca a aptidão do Instituto de Informática, a
+           carência de mão de obra apta a desenvolver softwares de qualidade e
+           a importância local do curso.
         </p>
         <hr class="half-rule">
         <a href="#" class="btn btn-outline-primary">Saiba mais</a>
