--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" action="pesquisa.html" method="get">
-          <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Search" aria-label="Search">
+          <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Search" aria-label="Search" required>
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
