:art: Atualizar dimensões do gif de carregamento

--- a/pesquisa.html
+++ b/pesquisa.html
@@ -54,7 +54,7 @@
 
     <div class="container" id="resultado" style="margin-top: 100px">
       <div class="col-md-12 text-center">
-        <img class="img-fluid" src="assets/img/loading.gif"/>
+        <img class="" style="width: 35%; max-width: 220px;" src="assets/img/loading.gif"/>
       </div>
 
     </div><!-- /.container -->
