--- a/pesquisa.html
+++ b/pesquisa.html
@@ -11,14 +11,15 @@
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/custom.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" style="background-color: #212121 !important;">
-      <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-md navbar-dark navbar-black bg-dark fixed-top">
+      <a class="navbar-brand" href="index.html">
          <img src="assets/img/marca-inf.png" width="30" height="30" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +29,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="#">Plano Pedagógico</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#">Matriz Curricular</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -43,14 +44,17 @@
               <a class="dropdown-item" href="#">Another action</a>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </li>
+          </li> -->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Search" aria-label="Search" required>
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <form class="form-inline my-2 my-lg-0" action="pesquisa.html" method="get">
+          <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
+          <button class="btn btn-warning my-2 my-sm-0" type="submit">
+            <i class="fa fa-search"></i>
+          </button>
         </form>
       </div>
     </nav>
+
 
     <div class="container" id="resultado" style="margin-top: 100px">
       <div class="col-md-12 text-center">
@@ -58,13 +62,24 @@
       </div>
     </div><!-- /.container -->
 
-    <footer class="text-muted" style="background-color: #f7f7f7; position: absolute; bottom: 0; width: 100%;">
-      <div class="container-fluid p-3 p-md-5">
-        <a href="https://github.com/matheuspiment/integracao2017">GitHub</a></li>
-        <p>Inspirado em <a href="https://getbootstrap.com/" target="_blank" rel="noopener">Bootstrap</a>.</p>
-        <p>Codigo licenciado <a rel="license noopener" href="https://github.com/matheuspiment/integracao2017/blob/master/LICENSE" target="_blank">MIT</a>, documentação <a rel="license noopener" href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>.</p>
-      </div>
-    </footer>
+
+    <footer class="footer footer-black" style="position: absolute; bottom: 0; width: 100%;">
+    		<div class="container">
+    			<div class="row">
+    				<nav class="footer-nav">
+    					<ul>
+    						<li><a href="https://www.ufg.br" target="_blank">UFG</a></li>
+    						<li><a href="http://inf.ufg.br" target="_blank">INF</a></li>
+    					</ul>
+    				</nav>
+    				<div class="credits ml-auto">
+    					<span class="copyright">
+    						© <script>document.write(new Date().getFullYear())</script>, feito com <i class="fa fa-heart heart"></i> por geminos
+    					</span>
+    				</div>
+    			</div>
+    		</div>
+    	</footer>
 
 
     <!-- Bootstrap core JavaScript
