--- a/apresentacao.html
+++ b/apresentacao.html
@@ -47,8 +47,8 @@
             </div>
           </li> -->
         </ul>
-        <form class="form-inline" action="pesquisa.html" method="get">
-          <input class="form-control mr-sm-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
+        <form class="form-inline search-form" action="pesquisa.html" method="get">
+          <input class="form-control mr-2" name="pesquisa" type="text" placeholder="Buscar" aria-label="Search" required>
           <button class="btn btn-warning" type="submit">
             <i class="fa fa-search"></i>
           </button>
