--- a/informacao/estrutura-curricular.html
+++ b/informacao/estrutura-curricular.html
@@ -73,7 +73,7 @@
           <div class="collapse" id="doc">
             <ul class="nav nav-pills flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="apresentacao.html">Apresentação<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="apresentacao.html">Apresentação</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="identificacao.html">Identificação</a>
@@ -118,7 +118,7 @@
                 <a class="nav-link" href="requisitos-legais-normativos.html">Requisitos Legais e Normativos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="estrutura-curricular.html">Estrutura Curricular</a>
+                <a class="nav-link active" href="estrutura-curricular.html">Estrutura Curricular<span class="sr-only">(current)</span></a>
               </li>
             </ul>
           </div>
